--- a/app1.tex
+++ b/app1.tex
@@ -219,7 +219,7 @@ where $Z_O^*$ and $Z_C^*$ are the effective ionization states\footnote{The ioniz
 
 \begin{figure}
 	\includegraphics[width=0.9\linewidth]{planning/images/arber/L-E_1param_eppc.png}
-	\caption{Plot of Arber et al. model (\autoref{eq:arber}) compared to the effective particle per cell model (using \autoref{eq:neff}) plotted against the electron particles per cell.} \label{fig:ppc_model}
+	\caption{Plot of Arber et al. model (\autoref{eq:arber}, green) compared to the effective particle per cell model (using \autoref{eq:neff}, purple) plotted against the electron particles per cell.} \label{fig:ppc_model}
 \end{figure}
  In \autoref{fig:ppc_model}, the original Arber scaling from \autoref{eq:arber} and adjusted scaling (with \autoref{eq:neff}) are plotted as a green dashed line and purple solid line with a scatter plot of the simulation data. While the Arber model is a smooth function of the electron particles per cell, the data clearly has points where it jumps up and down which the adjusted model captures more of. It is important to note that both models only used one free parameter: the heating constant $C_H$ from \autoref{eq:arber}. The plot itself shows the $r^2$ correlation score and \gls{MSE} which is more favorable for the model adjusted to effective particles per cell. 
 
