--- a/chap1.tex
+++ b/chap1.tex
@@ -101,7 +101,7 @@ As a proof of principle, Boivin \cite{Boivin_2022_NJoP} used TNSA beams from the
 As a final point, \gls{TNSA} beams can be accompanied by other radiation sources like electrons, x-rays, and neutrons. Different materials characterization processes could, in principle, be used in conjunction with each other. While \gls{TNSA} beams are not the most common way to characterize materials today, they may emerge as an important tool for their ability to be pulsed at a high repetition rate and generated from a relatively compact system.
 
 \section{Outline}
-In the last decade, machine learning has emerged as an increasingly important tool\footnote{This is especially clear from the past few years of generative AI with tools like Chat-GPT.} for understanding the vast volume of data present in this world. Scientists have already been using machine learning in other fields to make new discoveries, but the field of laser-driven proton acceleration has only started to make use of it. This is because machine learning requires an immense amount of data to provide a true benefit \cite{Dopp_2023_HPLSE} and most modern laser systems only produce around one pulse per second (or less). Before my time, our group produced \gls{TNSA} proton beams in 2018 \cite{Morrison_2018_NJoP} from a laser system that sends 1000 pulses a second. With this many pulses, collecting large amounts of data now becomes a reality. However, to realize applications, the \gls{TNSA} proton beams need to be optimized for specific use cases. 
+In the last decade, machine learning has emerged as an increasingly important tool for understanding the vast volume of data present in this world. Scientists have already been using machine learning in other fields to make new discoveries, but the field of laser-driven proton acceleration has only started to make use of it. This is because machine learning requires an immense amount of data to provide a true benefit \cite{Dopp_2023_HPLSE} and most modern laser systems only produce around one pulse per second (or less). Before my time, our group produced \gls{TNSA} proton beams in 2018 \cite{Morrison_2018_NJoP} from a laser system that sends 1000 pulses a second. With this many pulses, collecting large amounts of data now becomes a reality. However, to realize applications, the \gls{TNSA} proton beams need to be optimized for specific use cases. 
 
 This work is a continuation of prior efforts in the group to computationally study \gls{TNSA} proton beams from Gregory Ngirmang, Joseph Smith, Nashad Rahman and others. In \autoref{ch:2} and \autoref{ch:3}, I give the physics and computational background needed to understand the main body of the dissertation. The bulk of my PhD work is summarized in \autoref{ch:5} which involved the construction of a synthetic proton acceleration dataset. This data was used as a testbed for assessing the feasibility of applying machine learning to possible future proton acceleration datasets. In \autoref{ch:4}, I detail the simulations I ran to corroborate the experimental findings of enhanced proton acceleration from the use of a split pulse. A future laser facility could possibility use the split pulse scheme as one of many optimizations to achieve a proton beam with desired properties. In \autoref{ch:6}, I detail my involvement in programming a machine learning feedback loop to automatically optimize accelerated electrons and protons from collected data. Finally, in \autoref{ch:7}, I conclude and give suggestions for future work.
 
