--- a/chap3.tex
+++ b/chap3.tex
@@ -117,12 +117,12 @@ What is \gls{ML}? According to the computer scientist Arthur Samuel who populari
 \begin{quote}
 	... field of study that gives computers the ability to learn without being explicitly programmed. 
 \end{quote}
-The book \emph{Hands-On Machine Learning with Scikit-Learn} by Aurelien Geron \cite{Geron_2023_ML} gives a simple example of how a \gls{ML} model differs from a more traditional computer program in the form of an email spam filter. A traditional filter would implement user specified rules that mark emails as spam based on e-mail address and subject line keywords for example. A \gls{ML} approach would determine what keywords and e-mail addresses to look for based on prior emails that have been flagged as spam.
+The book \emph{Hands-On Machine Learning with Scikit-Learn} by Aurelien Geron \cite{Geron_2023_ML} gives a simple example of how an \gls{ML} model differs from a more traditional computer program in the form of an email spam filter. A traditional filter would implement user specified rules that mark emails as spam based on e-mail address and subject line keywords for example. An \gls{ML}-based approach would determine what keywords and e-mail addresses to look for based on prior emails that have been flagged as spam.
 
-The key difference in the two approaches is predictive power. The traditional filter removes spam from messages that fit a pattern explicitly given by the user. The \gls{ML} filter learns a generalized model that predicts possibly unforeseen types of spam. Since the \gls{ML} model has more degrees of freedom, it is more susceptible to incorrect predictions. In this section, we'll overview how to handle data for \gls{ML} algorithms, compare model training for different methods, and explain how these models can be used in practice. The information below is largely from the book by Geron \cite{Geron_2023_ML} unless specified otherwise.
+The key difference in the two approaches is predictive power. The traditional filter removes spam from messages that fit a pattern explicitly given by the user. The \gls{ML}-based filter learns a generalized model that predicts possibly unforeseen types of spam. Since the \gls{ML} model has more degrees of freedom, it is more susceptible to incorrect predictions. In this section, we'll overview how to handle data for \gls{ML} algorithms, compare model training for different methods, and explain how these models can be used in practice. The information below is largely from the book by Geron \cite{Geron_2023_ML} unless specified otherwise.
 
 \subsection{Pre-processing}
-\gls{ML} can be either supervised or unsupervised based on whether the data is labeled with a particular output. In the \gls{ML} context, model outputs are often referred to as labels and model inputs are often referred to as features. For the e-mail classification example, a supervised model would have training data that is already labeled as spam (or not spam) and an unsupervised model would have to infer if the data is spam by other means (e.g. clustering similar emails together). We will not be considering unsupervised learning in this work because we are ultimately interested in labeled data (which would be electron or proton energy spectra). To train an \gls{ML} model effectively, there are various things that need to be taken into account: 
+\gls{ML} can be either supervised or unsupervised based on whether the data is labeled with a particular output. In the context of \gls{ML}, model outputs are often referred to as labels and model inputs are often referred to as features. For the e-mail classification example, a supervised model would have training data that is already labeled as spam (or not spam) and an unsupervised model would have to infer if the data is spam by other means (e.g. clustering similar emails together). We will not be considering unsupervised learning in this work because we are ultimately interested in labeled data (which would be electron or proton energy spectra). To train an \gls{ML} model effectively, there are various things that need to be taken into account: 
 
 \begin{itemize}
 	\item Data Quantity: We need a significant amount of data in order to learn relevant trends and patterns. For example, a good spam classifier would have many e-mails (thousands to millions) to train on.
@@ -136,7 +136,7 @@ Failure to take the preceding steps into account can oftentimes lead to one of t
 	\item Overfitting: This can happen when the data is too complex in relation to the data. An example would be using a polynomial to fit a set of points that fall on a straight line. To fix this, we can constrain the model to make it more simple, gather more training data, or reduce noise in the training set.
 	\item Underfitting: This is when the model is too simple in relation to the data. This can be fixed by selecting a more complex model, using better features, and reducing any constraints on the model.
 \end{itemize} 
-Machine learning models are often more effective if we can perform \emph{pre-processing} which is the set of actions that transform raw data into data ready to be fed into a \gls{ML} model. As will be discussed in \autoref{ch:6}, significant pre-processing was needed which included removing missing values, combining data sources, applying a median-based filter, compressing the spectra into two metrics, and more. One particularly effective method of pre-processing that is specific to \gls{ML} is data normalization which makes sure that all the features and labels are approximately on the same scale. The two most common ways to approach this are summarized below: 
+Machine learning models are often more effective if we can perform \emph{pre-processing} which is the set of actions that transform raw data into data ready to be fed into an \gls{ML} model. As will be discussed in \autoref{ch:6}, significant pre-processing was needed which included removing missing values, combining data sources, applying a median-based filter, compressing the spectra into two metrics, and more. One particularly effective method of pre-processing that is specific to \gls{ML} is data normalization which makes sure that all the features and labels are approximately on the same scale. The two most common ways to approach this are summarized below: 
 
 \begin{itemize}
 	\item Standard Scaling: A particular feature can be transformed through the following: $x_i \rightarrow \frac{x_i - \mu}{\sigma}$ where $\mu$ is the mean of all the data points $x_i$ and $\sigma$ is the standard deviation. This normalizes the data to be centered at 0 and have a standard deviation of 1. 
