--- a/desai.bib
+++ b/desai.bib
@@ -1,6 +1,6 @@
 @article{Desai_2024_CPP,
-	author={John J. Felice and Ronak Desai and Nathaniel Tamminga and Joseph R. Smith and Alona Kryshchenko and Chris Orban and Michael L. Dexter and Anil K. Patnaik},
-	title={Towards Automated Learning with Ultra-Intense Laser Systems\\Operating in the kHz Repetition Rate Regime}, 
+	author = {Desai, Ronak and Zhang, Thomas and Felice, John J. and Oropeza, Ricky and Smith, Joseph R. and Kryshchenko, Alona and Orban, Chris and Dexter, Michael L. and Patnaik, Anil K.},
+	title = {Applying Machine-Learning Methods to Laser Acceleration of Protons: Lessons Learned From Synthetic Data},
 	year = {2024},
 	journal = {Contributions to Plasma Physics},
 	pages = {e202400080},
@@ -11,10 +11,10 @@
 }
 
 @misc{Desai_2025_APL,
-	title={Towards Automated Learning with Ultra-Intense Laser Systems\\Operating in the kHz Repetition Rate Regime}, 
+	title={Towards Automated Learning with Ultra-Intense Laser Systems Operating in the kHz Repetition Rate Regime}, 
 	author={John J. Felice and Ronak Desai and Nathaniel Tamminga and Joseph R. Smith and Alona Kryshchenko and Chris Orban and Michael L. Dexter and Anil K. Patnaik},
 	journal = {APL Machine Learning},
-	year={2025},
+	year={(in review)},
 	doi = {10.48550/arXiv.2307.16036},
 	url = {https://doi.org/10.48550/arXiv.2307.16036}
 }
