--- a/template-ack.tex
+++ b/template-ack.tex
@@ -1,3 +1,11 @@
 \begin{acknowledgments}
-I would like to thank my mother and father for 
+I would like to thank my advisor Chris Orban for his continuous support throughout the years. Unlike undergraduate school, the graduate school experience is heavily dependent on one's advisor. Chris always makes time to meet with me, gives valuable advice to keep momentum going on projects, and simultaneously allows me to take vacation time as needed throughout the year. My exposure to plasma physics was extremely limited prior joining the group and I am grateful to Chris for connecting me to many others involved in the high energy density physics research area at OSU and AFIT. Joseph Smith, Gregory Ngirmang, and Ricky Oropeza have given me valuable advice on running computational simulations. Scott Feister and fellow graduate student Nathaniel Tamminga have greatly helped me understand the controls system at the Extreme Light Laboratory at Wright-Patterson Air Force Base. Additionally, Joseph Snyder, Enam Chowdhury, Anil Patnaik, Michael Dexter, and Kyle Frische have exposed me to the experimental side through weekly Teams meetings. And of course, (then) undergraduate student Jack Felice jointly worked with me for my main PhD project which resulted in one publication and another under review at the time of this writing. His machine learning knowledge was immensely helpful and simply having another human working on my project was a great sanity check when I encountered issues. I will always remember our Yu-Gi-Oh matches at PGSC board game nights and random YouTube breaks in the middle of the day.
+
+Outside of my research group, I am thankful for my PhD committee of Douglass Schumacher, Brian Skinner, and Sasha Landsman for their feedback during my annual reviews and candidacy exam and for enabling me to graduate within five years. I am grateful for the research experiences I obtained during my first year of graduate school with both Brian and Sasha which provided me broader exposure to different fields of physics and better prepared me to work in Chris's group. Two of Douglass Schumacher's graduate students Brady Unzicker and Zhongwei Wang have also been great resources as well as great company to be around in our shared office. Additionally, I would be remiss if I did not acknowledge the ``Gaussian Beam'' Wikipedia page which has continually reminded me about the properties of idealized laser beams.
+
+My interest in physics began with my high school physics classes taught by Aileen Constans and David Wright. The laboratory experiment that first piqued my interest calculated where a projectile would land based on its initial speed, location, and launch angle. I was amazed by the predictive power of physics and my curiosity has only increased as I have progressed along my studies. From my undergraduate years at Rowan University, I am thankful to Hieu Nguyen for being an incredibly attentive and engaging advisor to my first mathematics research project. Hong Ling then provided my first physics research project that gave me a taste of contemporary topics in theoretical physics. I am additionally grateful to Michael McGuigan and Robert Konik at Brookhaven National Laboratory for mentoring me on research projects during my gap year through the SULI program and supporting my professional development that allowed me to attend OSU.
+
+Although my friends from my hometown have moved across the country, I am grateful for our trips to visit each other in places like Chicago, Connecticut, Columbus, and San Francisco. New friends have made living in Columbus enjoyable as well with dinner parties, rock climbing, and people to explore the city with. My mother, father, and brother have been great pillars of support for me throughout graduate school through regular phone calls, holiday celebrations, and home-cooked meals. Those interactions were especially necessary during my first year at OSU when I was living by myself in Columbus, taking all online classes, and sheltered inside due to the pandemic. My cousin Mansi, having gone through a PhD herself, has consistently been a great influence throughout all stages of my studies and now I understand her annoyance when people used to ask her how much longer she is going to be in school.
+
+Finally, I would like to thank my wonderful girlfriend Claire for her overflowing enthusiasm and quirky habits which endlessly keep me entertained. I will never forget how you summarized my presentation about laser-driven proton acceleration into a song to the beat of Chappel Roan's ``Hot to Go!'' by describing electrons moving from ``hot to cold''. You and your family have transformed Ohio from a place I could not identify on a map to a place that is truly a home away from home.
 \end{acknowledgments}
