--- a/template-vita.tex
+++ b/template-vita.tex
@@ -9,10 +9,10 @@
 % Insert other relevant items here (GTA, etc.)
 
 \begin{publist}
-\pubitem{Applying Machine Learning Methods to Laser Acceleration of Protons: Lessons Learned from Synthetic Data}
-\pubitem{Towards Automated Learning with Ultra-Intense Laser Systems Operating in the kHz Repetition Rate Regime}
-\pubitem{Intelligent Control of MeV Electrons and Protons}
-\pubitem{Can Two Pulses Enhance Proton and Electron Acceleration?  }
+\pubitem{``Can Two Temporally and Spatially Coincident Picosecond Laser Pulses Enhance Proton and Electron Acceleration?'' (in preparation)}
+\pubitem{``Towards Automated Learning with Ultra-Intense Laser Systems Operating in the kHz Repetition Rate Regime'' (in review)}
+\pubitem{``Towards Intelligent Control of MeV Energy Electrons and Protons from kHz Repetition Rate Ultra-Intense Laser Interactions'' (in review)}
+\pubitem{``Applying Machine Learning Methods to Laser Acceleration of Protons: Lessons Learned from Synthetic Data''}
 \end{publist}
 
 \begin{fieldsstudy}
