--- a/template.tex
+++ b/template.tex
@@ -117,7 +117,7 @@
 
 %\include{acronyms} %load list of acronyms contained in acronyms.tex
 \include{template-abstract}
-\dedication{Dedicate to ...} % Optional, and seriously not this lame
+\dedication{Dedicated to my grandfather Niranjan ``Nis Dada'' Shah. A lifelong educator, he left his Statistics PhD program for the opportunity to immigrate to the United States where he worked as an inner-city high school teacher, community college professor, and even a tutor to his neighbors while in retirement.}
 \include{template-ack}
 \include{template-vita}
 \tableofcontents 
