--- a/chap5.tex
+++ b/chap5.tex
@@ -1,12 +1,12 @@
 \chapter{Machine Learning Methods Applied to Synthetic Ion Acceleration Data} \label{ch:5}
 
-In recent years, the application of \gls{ML} methods to \gls{HEDS} has exploded due to two main reasons. First, ultra-intense laser systems are now capable of firing many shots per second and collecting data at a similar rate. This allows scientists to collect a lot of data, which cannot reasonably be handled in real-time by a human. Second, machine learning frameworks like PyTorch \cite{PyTorch_2019} are easily accessible and powerful so that scientists who are not machine learning researchers are capable of using them.
+In recent years, the application of \gls{ML} methods to \gls{HEDS} has exploded due to two main reasons. First, ultra-intense laser systems are now capable of firing many shots per second and collecting data at a similar rate. This allows scientists to collect a lot of data, which cannot reasonably be handled in real-time by a human. Second, \gls{ML}-based packages like PyTorch \cite{PyTorch_2019} are easily accessible and can run highly parallel computations quickly on relatively cheap consumer-grade \gls{GPU}s.
 
 One approach to applying machine learning with a limited amount of data is \gls{BO}. \GLS{BO}, based on prior collected data points, attempts to find another suitable data point that is different than the prior data and expected to yield a more optimized output (according to some chosen criteria). Using \gls{BO}, Jalas et al. \cite{Jalas_2021_PRL} optimizes the quality of a laser-accelerated electron beam and Dolier et al. \cite{Dolier_2022_NJoP} optimizes the maximum proton energy using PIC simulations. Another notable effort is Loughran et al. \cite{Loughran_2023_HPLSE} who used this approach to demonstrate higher maximum cutoff proton energies from an experiment using a 1 Hz laser. While this approach is commendable, it does not scale well to laser repetition rates of 100 or more Hz. 
 
-Quite a few works have explored using neural networks to analyze and extract information from large datasets generated from \gls{PIC} simulations. Djordevic et al. \cite{Djordjevic_2021_PPCF} used these simulations to find an empirical estimate for the effective acceleration time by using a \gls{NN} model (which informs our choice of 1.3 in \autoref{eq:fuchs_multiplier}). Schmitz et al. \cite{Schmitz_2023_LaPB} also trained \gls{NN}s on \gls{PIC} simulation data to better understand optimal laser and target parameter combinations for their system at TU Darmstadt. One thing these studies have in common is that they only use data from \gls{PIC} simulations which don't necessarily reflect real experiments (especially so because they are 1D and 2D simulations with reduced dimensionality). 
+Quite a few works have explored using neural networks to analyze and extract information from large datasets generated from \gls{PIC} simulations. Djordevic et al. \cite{Djordjevic_2021_PPCF} used these simulations to find an empirical estimate for the effective acceleration time by using a \gls{NN} model (which informs our choice of 1.3 in \autoref{eq:fuchs_multiplier}). Schmitz et al. \cite{Schmitz_2023_LaPB} also trained \gls{NN}s on \gls{PIC} simulation data to better understand optimal laser and target parameter combinations for their system at TU Darmstadt. One thing these studies have in common is that they only use data from \gls{PIC} simulations which do not necessarily reflect real experiments (especially so because they are 1D and 2D simulations with reduced dimensionality). 
 
-The \gls{WP-ELL} has a (1 kHz, $\tau_\text{FWHM} = 40$ fs, $\lambda = \SI{0.8}{\micro \meter}$, $w_0 = \SI{1.5}{\micro \meter}$) mJ class laser that can currently collect ion spectrometer data at a maximum rate of 100 Hz \cite{George_2019_HPLSE}. The laser irradiates a liquid target, formed from the intersection of two flowing liquid streams, that can be sustained for around 45 minutes before needing to be refilled. This acquisition rate and time could theoretically result in 270,000 unique data points during one collection. Laser systems like this are still new and the stability of the liquid target often interferes with the goal of collecting quality data. As a result, we first focused our energy into doing a \gls{ML} analysis on data produced from a well-known model by Fuchs \cite{Fuchs_2005_Nat} based on parameters at \gls{WP-ELL}. The goal of this analysis is not to make recommendations on what input parameters should be used in experiment, but to provide a general framework that can be extended to real data and also to help others incorporate \gls{ML} in their work by sharing our code (see Zenodo \cite{Desai_2024_Zenodo, Desai_2025_Zenodo} for the python code and datasets). By providing these files we hope to encourage others to compare other ML models against our results as a benchmark. This chapter details the work I did developing this synthetic dataset, comparing different \gls{ML} algorithms, and evaluating their potential effectiveness in a real experiment. 
+The \gls{WP-ELL} has a (1 kHz, $\tau_\text{FWHM} = 40$ fs, $\lambda = \SI{0.8}{\micro \meter}$, $w_0 = \SI{1.5}{\micro \meter}$) mJ class laser that can currently collect ion spectrometer data at a maximum rate of 100 Hz \cite{George_2019_HPLSE}. The laser irradiates a liquid target, formed from the intersection of two flowing liquid streams, that can be sustained for around 45 minutes before needing to be refilled. This acquisition rate and time could theoretically result in 270,000 unique data points during one collection. Laser systems like this are still new and the stability of the liquid target often interferes with the goal of collecting quality data. As a result, we first focused our energy into doing an \gls{ML}-based analysis on data produced from a well-known model by Fuchs \cite{Fuchs_2005_Nat} based on parameters at \gls{WP-ELL}. The goal of this analysis is not to make recommendations on what input parameters should be used in experiment, but to provide a general framework that can be extended to real data and also to help others incorporate \gls{ML} in their work by sharing our code (see Zenodo \cite{Desai_2024_Zenodo, Desai_2025_Zenodo} for the python code and datasets). By providing these files we hope to encourage others to compare other ML models against our results as a benchmark. This chapter details the work I did developing this synthetic dataset, comparing different \gls{ML} algorithms, and evaluating their potential effectiveness in a real experiment. 
 
 \section{Modified Fuchs et. al. Model} \label{sec:fuchs_model}
 
@@ -98,7 +98,7 @@ This formula not only reaches the correct values in the limiting cases, but also
 \begin{equation}
 	v_{i,front} = 2 c_s \ln(\tau + \sqrt{\tau^2 + 1})	
 \end{equation}
-where we've defined a normalized acceleration time $\tau \equiv \omega_{p,i} t / \sqrt{2 \exp(1)}$. Additionally, in the limit $\omega_{p,i} t \gg 1$, \autoref{eq:mora_xfront} becomes
+where we have defined a normalized acceleration time $\tau \equiv \omega_{p,i} t / \sqrt{2 \exp(1)}$. Additionally, in the limit $\omega_{p,i} t \gg 1$, \autoref{eq:mora_xfront} becomes
 
 \begin{equation}
 	x_{i, front} \simeq c_s t [2 \ln(\omega_{p,i} t) + \ln(2) - 3] \label{eq:mora_xfront_simple}
@@ -132,7 +132,7 @@ When $\tau \rightarrow \infty$, \cref{eq:mora_maxE} diverges to $\infty$. This i
 \begin{equation}
 	E_\text{max} = 2 k_B T_h [\ln(t_p + \sqrt{t_p^2 + 1})]^2 \label{eq:fuchs_maxE}
 \end{equation}
-where $t_p \equiv \omega_{p,i} t_\text{acc} / \sqrt{2 \exp(1)}$ just like the Mora model. We've also set $Z=1$ to signify that we are looking for hydrogen ions (i.e. protons) The crucial difference is that we express the acceleration time as 
+where $t_p \equiv \omega_{p,i} t_\text{acc} / \sqrt{2 \exp(1)}$ just like the Mora model. We have also set $Z=1$ to signify that we are looking for hydrogen ions (i.e. protons) The crucial difference is that we express the acceleration time as 
 
 \begin{equation}
 	t_\text{acc} \approx 1.3 \tau_\text{FWHM} \label{eq:fuchs_multiplier}
@@ -178,7 +178,7 @@ In addition, some of the main pulse energy can be depleted by traveling through 
 \begin{figure}
 	\centering 
 	\includegraphics[width=0.6\linewidth]{planning/images/density_profile.png}
-	\caption{The electron density profile of the pre-expanded target is depicted for various times $t_0$. In this figure, $n(0) \equiv n_\text{max}$. Taken from Desai et al. \cite{Desai_2025_APL} where $z$ was used as the distance along the laser axis instead of $x$ as done in this work. }
+	\caption{The electron density profile of the pre-expanded target is depicted for various times $t_0$. In this figure, $n(0) \equiv n_\text{max}$. Taken from Desai et al. \cite{Desai_2025_APL} (not yet published) where $z$ was used as the distance along the laser axis instead of $x$ as done in this work. }
 	\label{fig:density_profile}
 \end{figure}
 \begin{equation}
@@ -194,7 +194,7 @@ Finally, this etching reduces the effective pulse duration by
 \begin{figure}
 	\centering 
 	\includegraphics[width=0.6\linewidth]{planning/images/energy_dip_morrison.png}
-	\caption{The dotted black line shows the maximum proton energy predicted by \autoref{eq:fuchs_maxE} with the pump depletion considerations in \autoref{sec:fuchsv2} assuming $t_0 = \SI{60}{\pico \second}$, $I_0 = 10^{19} \text{W cm}^{-2}$, $\kappa=10^{-7}$, $d=\SI{0.5}{\micro \meter}$. The red stars indicate the predicted positions of maximum proton energy $\sim \SI{12}{\micro \meter}$. This plot is overlayed on top of an experimental maximum proton energy distribution from Morrison et. al. \cite{Morrison_2018_NJoP}. This figure is taken from Desai et. al. \cite{Desai_2025_APL}.}
+	\caption{The dotted black line shows the maximum proton energy predicted by \autoref{eq:fuchs_maxE} with the pump depletion considerations in \autoref{sec:fuchsv2} assuming $t_0 = \SI{60}{\pico \second}$, $I_0 = 10^{19} \text{W cm}^{-2}$, $\kappa=10^{-7}$, $d=\SI{0.5}{\micro \meter}$. The red stars indicate the predicted positions of maximum proton energy $\sim \SI{12}{\micro \meter}$. This plot is overlayed on top of an experimental maximum proton energy distribution from Morrison et. al. \cite{Morrison_2018_NJoP}. This figure is taken from Desai et. al. \cite{Desai_2025_APL} (not yet published).}
 	\label{fig:energy_dip_morrison}
 \end{figure}
 \begin{equation}
@@ -230,7 +230,7 @@ We used three different \gls{ML} models in our study: \gls{SVR}, \gls{GPR}, \gls
 
 \subsection{Results}
 
-Our first task was to evaluate how well the trained models can fit the underlying dataset as the number of data points is increased. We accomplished this by evaluating the models on a testing set which is which is proportional to the amount of training points in a 80-20 training-testing split. In \autoref{fig:mape_3levels}, the \gls{MAPE} is evaluated between the model outputs and the testing data outputs to assess the accuracy of each method for three different noise levels -- 0, 15, and 30 \%. Since, in this figure, the testing data contains noise, it is impossible to achieve 0 \% error. As a result, we've included a black line to show the error between the testing data and the theoretical value predicted by the Fuchs et al. model. We can clearly see that the all the \gls{ML} models don't appear to get better when we increase the number of data points.  Additionally, we can see that the \gls{NN} model has the worst accuracy and and more variability.
+Our first task was to evaluate how well the trained models can fit the underlying dataset as the number of data points is increased. We accomplished this by evaluating the models on a testing set which is which is proportional to the amount of training points in a 80-20 training-testing split. In \autoref{fig:mape_3levels}, the \gls{MAPE} is evaluated between the model outputs and the testing data outputs to assess the accuracy of each method for three different noise levels -- 0, 15, and 30 \%. Due to the noise present in the testing data, a perfect model's accuracy would still be limited by the noise level. As a result, we have included a black line to show the error between the testing data and the theoretical value predicted by the Fuchs et al. model as a baseline for comparison. We can clearly see that all the \gls{ML} models do not appear to get better when we increase the number of data points.  Additionally, we can see that the \gls{NN} model has the worst accuracy and and more variability.
 
 \begin{figure}
 	\centering 
@@ -239,7 +239,7 @@ Our first task was to evaluate how well the trained models can fit the underlyin
 	\label{fig:mape_3levels}
 \end{figure}
 
-Then, we kept the number of data points fixed at 2,000 and varied the noise level from 0 to 30\% to make a similar analysis in \autoref{fig:mape_noise}. These plots show how the \gls{NN} model doesn't do well without any added noise. In addition to the noisy test data (solid line), the error on the same data without noise was also plotted as a dashed line. One interesting feature about this plot is that the \gls{NN} model's error does not increase significantly as the noise level increases. 
+Then, we kept the number of data points fixed at 2,000 and varied the noise level from 0 to 30\% to make a similar analysis in \autoref{fig:mape_noise}. These plots show how the \gls{NN} model does not do well without any added noise. In addition to the noisy test data (solid line), the error on the same data without noise was also plotted as a dashed line. One interesting feature about this plot is that the \gls{NN} model's error does not increase significantly as the noise level increases. 
 
 \begin{figure}
 	\centering 
@@ -283,16 +283,16 @@ We generated the same plots\footnote{These plots are colloquially referred to as
 
 \section{Second Analysis} \label{sec:second_analysis}
 
-In this section, my work from \autoref{sec:first_analysis} was expanded upon and written into a manuscript that is currently under consideration at \emph{APL Machine Learning}. This work was originally assigned to (then) undergraduate student Jack Felice as a similar, but complementary project to what I primarily worked on. Jack did the bulk of the work in this project and borrowed help from me as needed. When Jack left for graduate school at the University of Maryland, I spent a few months organizing his work, contributing to the text of the paper, and creating polished figures. The co-authors from this work are largely the same as the previous work, but additionally include fellow graduate student Nathaniel Tamminga for his discussion on the constrained data campaign. This work was also modeled on the \gls{WP-ELL} laser system.
+In this section, my work from \autoref{sec:first_analysis} was expanded upon and written into a manuscript that is currently under consideration at \emph{Contributions to Plasma Physics}. This work was originally assigned to (then) undergraduate student Jack Felice as a similar, but complementary project to what I primarily worked on. Jack did the bulk of the work in this project and borrowed help from me as needed. When Jack left for graduate school at the University of Maryland, I spent a few months organizing his work, contributing to the text of the paper, and creating polished figures. The co-authors from this work are largely the same as the previous work, but additionally include fellow graduate student Nathaniel Tamminga for his discussion on the constrained data campaign. This work was also modeled on the \gls{WP-ELL} laser system.
 
 \subsection{Methods}
 In \autoref{sec:first_analysis}, we tried to address training a model on only 20,000 data points. Furthermore, this model was relatively simple -- a regression algorithm could fit the model quite accurately with only a few thousand points. Also, we found that the \gls{NN} model performed poorly due to lack of model complexity and too few data points. A real experimental dataset would be much more complex and thus require more data to understand its underlying trends. As a result, our second project added complexity in the form of pre-expansion of the target explained in \autoref{sec:fuchsv2}. 
 
-From this new modified model, we generated a training dataset of 1,525,000 points by sampling from a uniform grid of points in a 4D parameter space. The three inputs from \autoref{sec:first_analysis} are the same (except we reduced the maximum of the target thickness to $\SI{5}{\micro \meter}$). This grid included thicknesses in steps of $\SI{0.5}{\micro \meter}$, focal positions in steps of $\SI{1}{\micro \meter}$ and intensities in steps of $\SI{1.8e17}{\watt \per \centi \meter \squared}$. The relevant quantity to control the extent of the pre-plasma is the contrast $\kappa$ which was varied in steps of $1.8 \times 10^{-8}$. In \autoref{fig:density_profile}, the effect of the prepulse can be seen modifying the density profile of the target ($t_0 = 60$ ps was used in this work). The 250,000 point testing dataset was generated from the same intervals as the training set, but without noise and on a grid of points (instead of random sampling throughout the interval).
+From this new modified model, we generated a training dataset of 1,525,000 points by sampling from a uniform grid of points in a 4D parameter space. The three inputs from \autoref{sec:first_analysis} are the same (except we reduced the maximum of the target thickness to $\SI{5}{\micro \meter}$). This grid included thicknesses in steps of $\SI{0.5}{\micro \meter}$, focal positions in steps of $\SI{1}{\micro \meter}$ and intensities in steps of $\SI{1.8e17}{\watt \per \centi \meter \squared}$. The relevant quantity to control the extent of the pre-plasma is the contrast $\kappa$ which was varied in steps of $1.8 \times 10^{-8}$. In \autoref{fig:density_profile}, the effect of the prepulse can be seen modifying the density profile of the target ($t_0 = 60$ ps was used in this work). The 250,000 point testing dataset was generated from the same intervals as the training set, but randomly sampled throughout the interval (instead of a grid-based approach) and without noise.
 
 We used the same outputs as before: $E_\text{max}$, $E_\text{tot}$, and $E_\text{avg}$. Since the new contrast parameter can make the proton energies get arbitrarily low, we set a floor to these outputs energies of 1 keV, 1 nJ, and 1 keV respectively. This was motivated by the finite energy resolution of ion energy detectors and preventing the \gls{MAPE} metric from getting a division by zero error. Additionally, the acceleration time multiplier (see \autoref{eq:fuchs_multiplier}) was increased to 25 to balance out the lower predicted proton energies from the new physics model's larger effective thickness (\autoref{eq:d_eff}). The features of this new model can be seen in \autoref{fig:density_profile} which highlight the characteristic \emph{dip} in the proton energy at peak focus obtained from Morrison et al. \cite{Morrison_2018_NJoP}.
 
-We used a \gls{NN} model like the previous work in \autoref{sec:first_analysis}, but modified the other two models. The \gls{SVR} was not able to handle more than a few hundred thousand data points and for this reason, it was not used. Instead, we used the more elementary \gls{POLY} due to its simplicity which can be used as a baseline model without \gls{GPU} accelerated computations. The \gls{POLY} model could fit the data in \autoref{sec:first_analysis} accurately, but it does not work well with the added complexity in the new model (which will be seen later). Then, we replaced the exact \gls{GPR} with the \gls{SVGP} (see \cite{Hensman_2014_SVGP}) which assumes a variational distribution over some amount of inducing points, restricting the training data to a representative subset. This allows the \gls{SVGP} to be trained on data sets of order one million points in mini-batches just like the \gls{NN}. Like before, we summarize the hyperparameters in \autoref{tab:hps2} (and the architecture can be visualized in \autoref{fig:nn_arch}).  Finally, we replaced the standard z-score normalization with min-max scaling -- a linear scaling that scales the minimum value of a particular data column to be 0 and the maximum value to be 1. Min-max scaling was chosen to better represent the nature of parameter selection: uniform sampling between some minimum and maximum value.
+We used a \gls{NN} model like the previous work in \autoref{sec:first_analysis}, but changed the other two models. The \gls{SVR} was not able to handle more than a few hundred thousand data points and for this reason, it was not used. Instead, we used the more elementary \gls{POLY} due to its simplicity which can be used as a baseline model without \gls{GPU} accelerated computations. The \gls{POLY} model could fit the data in \autoref{sec:first_analysis} accurately, but it does not work well with the added complexity in the new model (which will be seen later). Then, we replaced the exact \gls{GPR} with the \gls{SVGP} (see \cite{Hensman_2014_SVGP}) which assumes a variational distribution over some amount of inducing points, restricting the training data to a representative subset. This allows the \gls{SVGP} to be trained on data sets of order one million points in mini-batches just like the \gls{NN}. Like before, we summarize the hyperparameters in \autoref{tab:hps2} (and the architecture can be visualized in \autoref{fig:nn_arch}).  Finally, we replaced the standard z-score normalization with min-max scaling -- a linear scaling that scales the minimum value of a particular data column to be 0 and the maximum value to be 1. Min-max scaling was chosen to better represent the nature of parameter selection: uniform sampling between some minimum and maximum value.
 
 \begin{table}
 	\centering
@@ -406,7 +406,7 @@ In both campaigns, choices about how many increments to make for different param
 \begin{figure}
 	\centering
 	\includegraphics[width=4in]{planning/images/paper2/fig11.eps}
-	\caption{Testing set MAPE evaluated on several ML models trained on data combined from two separate campaigns shown in \autoref{fig:zigzag}. The dashed line differs from the solid blue line in the polynomial degree.} The different data splits are chosen to be approximately the same as what was shown in \autoref{fig:train_time_accuracy}.
+	\caption{Testing set MAPE evaluated on several ML models trained on data combined from two separate campaigns shown in \autoref{fig:zigzag}. The dashed line differs from the solid blue line in the polynomial degree. The different data splits are chosen to be approximately the same as what was shown in \autoref{fig:train_time_accuracy}.} 
 	\label{fig:split_accuracy}
 \end{figure}
 
